@@ -1,3 +1,8 @@
+2023-09-16  vaiorabbit  <http://twitter.com/vaiorabbit>
+
+	* lib/raygui_helper.rb: Added more APIs
+	* example/gui_controls.rb: Added
+
 2023-09-12  vaiorabbit  <http://twitter.com/vaiorabbit>
 
 	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/2e7a7877a51ca33487642bd7ed0367b017b54486 ) and raygui ( https://github.com/raysan5/raygui/commit/1c3305031d2dcab2fbd3c7d7ded8b7aee1738908)
